--- a/priyaaboutme.html
+++ b/priyaaboutme.html
@@ -44,7 +44,7 @@ color: darkmagenta;
 <h2><i><u>Priya Subburaj</u></i></h2>
 <hr>
 <nav>
-		<a href="priya.html">Home</a>
+		<a href="index.html">Home</a>
 	</nav>
 <p> I love travelling to different cities and explore the places.My favourite place is YellowStone and Nigara.
 	<br>
